test HM for Acloh and file structure change

--- a/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
@@ -3,16 +3,16 @@
 	useOnDemand = true
 	Body
 	{
-		name = Epochon
-		cacheFile = TerrasIgnotas/Cache/Epochon.bin
+		name = Acloh
+		cacheFile = TerrasIgnotas/Cache/Acloh.bin
 		Template
 		{
-			name = Tylo
+			name = Laythe
 			removeAllPQSMods = true
 		}
 		Properties
 		{
-			description = According to myth, Epochon "contains upon and within it wisdom like 'bu Galaksi' has not seen before or since". What secrets could the planet hold?
+			description = Acloh is suprisingly habitable and frighetingly those to that gas giant. You'd have to be insane to build a colony there, right? ...right?
 			
 			radius = 300000
 			geeASL = 0.6
@@ -20,7 +20,6 @@
 			rotates = true
 			tidallyLocked = false
 			initialRotation = 0
-			isHomeWorld = false
 			timewarpAltitudeLimits = 0 1000 5000 10000 30000 50000 130000 275000
 			ScienceValues
 			{
@@ -34,7 +33,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Kerbin
+			referenceBody = Hil
 			color = RGBA(0,100,255,1)
 			inclination = 0
 			eccentricity = 0.02
@@ -51,8 +50,8 @@
 			fadeEnd = 100000
 			Material
 			{
-				texture = TerrasIgnotas/PluginData/PumilioSystem/Epochon/Epochon_color.png
-				normals = TerrasIgnotas/PluginData/PumilioSystem/Epochon/Epochon_normal.png
+				texture = TerrasIgnotas/PluginData/PumilioSystem/Acloh_height.png
+				//normals = TerrasIgnotas/PluginData/PumilioSystem/Epochon_normal.png
 			}
 		}
 		PQS
@@ -106,14 +105,14 @@
 			{
 				VertexHeightMap
 				{
-					map = TerrasIgnotas/PluginData/PumilioSystem/Epochon_height.png
+					map = TerrasIgnotas/PluginData/PumilioSystem/Acloh_height.png
 					deformity = 20500
 					order = 1
 					enabled = true
 				}
 				VertexColorMap
 				{
-					map = TerrasIgnotas/PluginData/PumilioSystem/Epochon_height.png
+					map = TerrasIgnotas/PluginData/PumilioSystem/Acloh_height.png
 					order = 2
 					enabled = true
 				}
