--- a/Development/KopernicusConfigs/Core/Gobek/Gobek.cfg
+++ b/Development/KopernicusConfigs/Core/Gobek/Gobek.cfg
@@ -6,20 +6,21 @@
         Template
         {
             name = Sun
-	    removeCoronas = true
-	    removeProgressTree = false
+			removeCoronas = true
+			removeProgressTree = false
         }
         Properties
         {
             description = If this were real life, we wouldnt be here to wonder if this was real life.
             radius = 2684201590460526
             mass = 1.2295821e+28
+			//sphereOfInfluence = 8.88981626e15
             geeASL =  353.13133412196
             starLuminosity = 0.20
-	    rotationPeriod = 304000
-	    rotates = true
-	    tidallyLocked = false
-	    displayName = Gobek
+			rotationPeriod = 304000
+			rotates = true
+			tidallyLocked = false
+			displayName = Gobek
         }
         ScaledVersion
         {
@@ -64,7 +65,7 @@
 					key = 10000000 0.0390625 0 0
 					key = 25000000 0.01953125 0 0
 					key = 50000000 0 0 0
-                                }
+                }
                 brightnessCurve
                 {
                     key = -0.02 0.4 0 0
