--- a/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
@@ -54,6 +54,27 @@
 				//normals = TerrasIgnotas/PluginData/PumilioSystem/Epochon_normal.png
 			}
 		}
+		Atmosphere
+		{
+			ambientColor = 0,0,0,1
+			lightColor = 0,0.5,0.5,1
+			altitude = 18000
+			enabled = true
+			oxygen = true
+			staticPressureASL = 1.7
+			
+			pressureCurve
+			{
+				key =	0	1
+				key =	0.105	0.5495349947
+				key =	0.2	0.2925577761
+				key =	0.34	0.1167954108
+				key =	0.44	0.06270944979
+				key =	0.62	0.02158865038
+				key =	0.76	0.008395517723
+				key =	1	0
+			}
+		}
 		PQS
 		{
 			materialType = AtmosphericExtra
