--- a/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
@@ -3,6 +3,7 @@
 	useOnDemand = true
 	Body
 	{
+		identifier = TerrasIgnotas/Acloh
 		name = Acloh
 		cacheFile = TerrasIgnotas/Cache/Acloh.bin
 		Template
