--- a/Development/KopernicusConfigs/PumilioSystem/Jac.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Jac.cfg
@@ -3,8 +3,8 @@
 	Body
 	{
 		name = Jac
-		cacheFile = TerrasIgnotas/Cache/Pumilio_A/Jac.bin
-		identifier = TIPUMGAS1
+		cacheFile = TerrasIgnotas/Cache/Jac.bin
+		identifier = TerrasIgnotas/Jac
 		DEBUG
 		{
 			exportMesh = true
