--- a/Development/KopernicusConfigs/PumilioSystem/Jil.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Jil.cfg
@@ -3,8 +3,8 @@
 	Body
 	{
 		name = Jil
-		identifier = TIPUMGAS2
-		cacheFile = TerrasIgnotas/Cache/Pumilio/Jil.bin
+		identifier = Terrasgnotas/Jil
+		cacheFile = TerrasIgnotas/Cache/Jil.bin
 		DEBUG
 		{
 			exportMesh = true
