--- a/Development/KopernicusConfigs/PumilioSystem/Maezenis.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Maezenis.cfg
@@ -3,6 +3,7 @@
 	Body
 	{
 		name = Maezenis
+		identifier = TerrasIgntas/Maezenis
 		cacheFile = TerrasIgnotas/Cache/Maezenis.bin
 		contractWeight = 0
 		Template
