--- a/Development/KopernicusConfigs/PumilioSystem/Usumtin.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Usumtin.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Usumtin
-		identifier = TIPUMGAS2MOON1
+		identifier = TerrasIgnotas/Usumtin
 		Template
 		{
 			name = Mun
@@ -14,12 +14,6 @@
 			description = This moon is a strange one, but not the strangest. Its placeholder description seems to have been crafted with a bit of laziness involved...
 			radius = 70000
 		}
-		
-		
-		
-		
-		
-		
 		
 		PQS
 		{
