--- a/Development/Patches/Changelog.cfg
+++ b/Development/Patches/Changelog.cfg
@@ -14,5 +14,31 @@ KERBALCHANGELOG:NEEDS[KerbalChangelog]
     {
         version = 0.1.1 //Version number, numbers only with no spaces!
         change = Fixed load failure due to missing MM patch
-    }	
+    }
+    VERSION
+    {
+        version = 0.1.2
+        change = Fixed .version file causing CKAN issue
+    }
+    VERSION
+    {
+        version = 0.1.3
+        change = Removed Epochon, it was causing load errors
+        change = Pruned unused files
+    }
+    VERSION
+    {
+        version = 0.1.4
+        change = Gobek now oeits the sun because why the heck not
+        change = Pumilio is now a better version of itself
+        change = Mazenis too
+        change = Everything should load now
+        change = Stars look cooler now
+        change = Added Ilbis
+        change = Added SunCurve, shouldnt outshine everything now
+        change = Jac and JIl's textures are updated, along with their orbits
+        change = Insertion of some localization
+        change = Folders are now organized, for easier loading
+        change = Kopernicus for 1.6 is out now so go wild
+    }
 }
