--- a/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Acloh.cfg
@@ -34,7 +34,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Hil
+			referenceBody = Jil
 			color = RGBA(0,100,255,1)
 			inclination = 0
 			eccentricity = 0.02
@@ -46,7 +46,7 @@
 		}
 		ScaledVersion
 		{
-			type = Vacuum
+			type = Atmospheric
 			fadeStart = 70000
 			fadeEnd = 100000
 			Material
@@ -127,27 +127,16 @@
 			{
 				VertexHeightMap
 				{
-					map = TerrasIgnotas/PluginData/PumilioSystem/Acloh_height.png
+					map = TerrasIgnotas/PluginData/PumilioSystem/Acloh/Acloh_height.png
 					deformity = 20500
 					order = 1
 					enabled = true
 				}
 				VertexColorMap
 				{
-					map = TerrasIgnotas/PluginData/PumilioSystem/Acloh_height.png
+					map = TerrasIgnotas/PluginData/PumilioSystem/Acloh/Acloh_height.png
 					order = 2
 					enabled = true
-				}
-				VertexHeightNoise
-				{
-					deformity = 500
-					frequency = 1.0
-					octaves = 1.0
-					persistance = 1.0
-					seed = 5489256
-					noiseType = RiggedMultiFractal
-					mode = 1
-					lacunarity = 1.0
 				}
 			}
 		}
