--- a/Development/KopernicusConfigs/PumilioSystem/Jac.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Jac.cfg
@@ -37,7 +37,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Sun
+			referenceBody = Maezenis
 			semiMajorAxis = 5000000000
 			inclination = 12
 			eccentricity = 0.1
