--- a/Development/KopernicusConfigs/PumilioSystem/Jil.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Jil.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Jil
-		identifier = Terrasgnotas/Jil
+		identifier = TerrasIgnotas/Jil
 		cacheFile = TerrasIgnotas/Cache/Jil.bin
 		DEBUG
 		{
@@ -16,7 +16,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Pumilio //Remember to actually make Pumilio
+			referenceBody = Pumilio
 			inclination = 9.32098
             eccentricity = 0.02
             semiMajorAxis = 1.56954E+12
@@ -30,7 +30,7 @@
         {
             description = #LOC_TerrasIgnotas_JilDescription
             radius = 2.13E+6
-            geeASL = 0.35
+            geeASL = 3.35
             rotationPeriod = 32410
             rotates = true
             tidallyLocked = false
