--- a/Development/KopernicusConfigs/PumilioSystem/Maezenis.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Maezenis.cfg
@@ -2,10 +2,12 @@
 {
 	Body
 	{
+		
 		name = Maezenis
-		identifier = TerrasIgntas/Maezenis
+		identifier = TerrasIgnotas/Maezenis
 		cacheFile = TerrasIgnotas/Cache/Maezenis.bin
 		contractWeight = 0
+		SigmaBinary { }
 		Template
 		{
 			name = Sun
@@ -16,7 +18,7 @@
 			description = quick someone think of one
 			displayName = Maezenis^N
 			starLuminosity = 0.001333
-			radius = 50177500
+			radius = 8252000
 			geeASL = 143.11027351085
 			rotates = true
 			rotationPeriod = 296000
@@ -109,7 +111,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Kerbin // change this value
+			referenceBody = Pumilio // change this value
 			semiMajorAxis = 12000000 // change this value
 			eccentricity = 0.027
 			inclination = 5.550
